--- a/.github/workflows/toolchain-build.yml
+++ b/.github/workflows/toolchain-build.yml
@@ -1,10 +1,10 @@
 name: GCC+LLD Build
 
 on:
-  push:
+  workflow_dispatch:
     branches: [ main ]
   schedule:
-    - cron: '0 0 * * 0,4'
+    - cron: '0 00 * * SAT'
 
 env:
       GITHUB_EMAIL: ${{ secrets.EMAIL }}
