--- a/.github/workflows/toolchain-build.yml
+++ b/.github/workflows/toolchain-build.yml
@@ -17,19 +17,10 @@ jobs:
   build-arm64-tc:
     runs-on: ubuntu-latest
     container:
-      image: fedora:latest
+      image: mhmmdfdlyas/dockerfile:t-ubuntu
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set build date
-      id: get-date
-      run: |
-        ln -sf /usr/share/zoneinfo/Asia/Kolkata /etc/localtime
-        echo ::set-output name=date::$(/bin/date -u "+%Y%m%d")
-    - name: Setup
-      run: |
-        sudo dnf groupinstall "Development tools" -y
-        sudo dnf install mpfr-devel gmp-devel libmpc-devel zlib-devel glibc-devel.i686 glibc-devel binutils-devel g++ texinfo bison flex cmake which ninja-build clang lld bzip2 binutils-arm-linux-gnu binutils-aarch64-linux-gnu file -y
     - name: Build
       run: |
         chmod a+x build-*.sh
@@ -56,19 +47,10 @@ jobs:
   build-arm-tc:
     runs-on: ubuntu-latest
     container:
-      image: fedora:latest
+      image: mhmmdfdlyas/dockerfile:t-ubuntu
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set build date
-      id: get-date
-      run: |
-        ln -sf /usr/share/zoneinfo/Asia/Kolkata /etc/localtime
-        echo ::set-output name=date::$(/bin/date -u "+%Y%m%d")
-    - name: Setup
-      run: |
-        sudo dnf groupinstall "Development tools" -y
-        sudo dnf install mpfr-devel gmp-devel libmpc-devel zlib-devel glibc-devel.i686 glibc-devel binutils-devel g++ texinfo bison flex cmake which ninja-build clang lld bzip2 -y
     - name: Build
       run: |
         chmod a+x build-*.sh
