workflows: set default TimeZone to Jakarta (WIB/UTC+07)
Change-Id: I8f542b2e02d288417d5c9b2e2a7b7a469d216bf9

--- a/.github/workflows/toolchain-build.yml
+++ b/.github/workflows/toolchain-build.yml
@@ -7,6 +7,7 @@ on:
     - cron: '0 00 * * SAT'
 
 env:
+      TZ: Asia/Jakarta
       GITHUB_EMAIL: ${{ secrets.EMAIL }}
       GITHUB_TOKEN: ${{ secrets.API_TOKEN_GITHUB }}
       GITHUB_USER: ${{ secrets.USERNAME }}
