--- a/.github/workflows/toolchain-build.yml
+++ b/.github/workflows/toolchain-build.yml
@@ -13,7 +13,24 @@ env:
       GITHUB_USER: ${{ secrets.USERNAME }}
 
 jobs:
+  push-dump-commit:
+    runs-on: ubuntu-latest
+    container:
+      image: mhmmdfdlyas/dockerfile:t-ubuntu
+
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Push an empty commit
+      run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git commit --allow-empty -m "github-actions: $(date +'%d%m%Y')"
+          git push https://${GITHUB_TOKEN}@github.com/greenforce-project/gcc_build main -f
+
   build-arm64-tc:
+    needs: push-dump-commit
     runs-on: ubuntu-latest
     container:
       image: mhmmdfdlyas/dockerfile:t-ubuntu
@@ -51,6 +68,7 @@ jobs:
         git push -f
 
   build-arm-tc:
+    needs: push-dump-commit
     runs-on: ubuntu-latest
     container:
       image: mhmmdfdlyas/dockerfile:t-ubuntu
