workflows: Upload final GCC to GitHub Releases
Over time, using `git clone` with `--depth=1` will become increasingly burdensome as the accumulated history will eventually require a significant amount of space for cloning GCC, which is less than 500MB in size. Compressing and uploading the final GCC could be an alternative to address this issue.

Change-Id: Ib33650c6c00f1e3a8e29510e6cf04fd2f930e6ff

--- a/.github/workflows/toolchain-build.yml
+++ b/.github/workflows/toolchain-build.yml
@@ -58,6 +58,8 @@ jobs:
         ./bin/aarch64-linux-gnu-gcc -v 2>&1 | tee ../gcc-version
         ./bin/aarch64-linux-gnu-ld -v 2>&1 | tee ../ld-version
         bash "$script_dir/strip-binaries.sh"
+        build_tag="$(date +'%d%m%Y')"
+        build_date="$(date +'%-d %B %Y')"
         git add . -f
         touch ../git_commit
         {
@@ -66,8 +68,22 @@ jobs:
             echo "GCC repo commit: $(cat /tmp/gcc_commit)"
             echo "Link: https://github.com/gcc-mirror/gcc/commit/$(cat /tmp/gcc_hash)"
         } > ../git_commit
-        git commit -m "greenforce: Bump to $(date +'%d%m%Y') build" -m "$(cat ../git_commit)" -s
+        git commit -m "greenforce: Bump to ${build_tag} build" -m "$(cat ../git_commit)" -s
         git push -f
+        gcc_version="$(cat ../gcc-version | grep 'gcc version' | awk '{for(i=1;i<=NF;i++) if ($i ~ /[0-9]+\.[0-9]+\.[0-9]+/) print $i}')"
+        release_file="greenforce-GCC-${gcc_version}-arm64gnu-${build_tag}.tar.zst"
+        tar -I 'zstd --ultra -19 -T0' -cf "${release_file}" ./*
+        if gh release view "${build_tag}"; then
+            gh release upload --clobber "${build_tag}" "${release_file}" &&
+                {
+                    echo "Version ${build_tag} updated!"
+                }
+        else
+            gh release create "${build_tag}" "${release_file}" -t "${build_date}" &&
+                {
+                    echo "Version ${build_tag} released!"
+                }
+        fi
 
   build-arm-tc:
     needs: push-dump-commit
@@ -96,6 +112,8 @@ jobs:
         ./bin/arm-linux-gnueabi-gcc -v 2>&1 | tee ../gcc-version
         ./bin/arm-linux-gnueabi-ld -v 2>&1 | tee ../ld-version
         bash "$script_dir/strip-binaries.sh"
+        build_tag="$(date +'%d%m%Y')"
+        build_date="$(date +'%-d %B %Y')"
         git add . -f
         touch ../git_commit
         {
@@ -104,5 +122,19 @@ jobs:
             echo "GCC repo commit: $(cat /tmp/gcc_commit)"
             echo "Link: https://github.com/gcc-mirror/gcc/commit/$(cat /tmp/gcc_hash)"
         } > ../git_commit
-        git commit -m "greenforce: Bump to $(date +'%d%m%Y') build" -m "$(cat ../git_commit)" -s
+        git commit -m "greenforce: Bump to ${build_tag} build" -m "$(cat ../git_commit)" -s
         git push -f
+        gcc_version="$(cat ../gcc-version | grep 'gcc version' | awk '{for(i=1;i<=NF;i++) if ($i ~ /[0-9]+\.[0-9]+\.[0-9]+/) print $i}')"
+        release_file="greenforce-GCC-${gcc_version}-armgnu-${build_tag}.tar.zst"
+        tar -I 'zstd --ultra -19 -T0' -cf "${release_file}" ./*
+        if gh release view "${build_tag}"; then
+            gh release upload --clobber "${build_tag}" "${release_file}" &&
+                {
+                    echo "Version ${build_tag} updated!"
+                }
+        else
+            gh release create "${build_tag}" "${release_file}" -t "${build_date}" &&
+                {
+                    echo "Version ${build_tag} released!"
+                }
+        fi
