workflows: Synchronize release tags to GCC bump
To avoid confusion between GCC versions and release tags.

Change-Id: I35a3674da1f667a9d3afdb0b25a04bcd336ced17

--- a/.github/workflows/toolchain-build.yml
+++ b/.github/workflows/toolchain-build.yml
@@ -58,7 +58,7 @@ jobs:
         ./bin/aarch64-linux-gnu-gcc -v 2>&1 | tee ../gcc-version
         ./bin/aarch64-linux-gnu-ld -v 2>&1 | tee ../ld-version
         bash "$script_dir/strip-binaries.sh"
-        build_tag="$(date +'%d%m%Y')"
+        build_tag="$(cat /tmp/gcc_date)"
         build_date="$(date +'%-d %B %Y')"
         git add . -f
         touch ../git_commit
@@ -112,7 +112,7 @@ jobs:
         ./bin/arm-linux-gnueabi-gcc -v 2>&1 | tee ../gcc-version
         ./bin/arm-linux-gnueabi-ld -v 2>&1 | tee ../ld-version
         bash "$script_dir/strip-binaries.sh"
-        build_tag="$(date +'%d%m%Y')"
+        build_tag="$(cat /tmp/gcc_date)"
         build_date="$(date +'%-d %B %Y')"
         git add . -f
         touch ../git_commit
