Revert "workflows: run builds on every push"
This reverts commit 7141153beba2742098c9dd54f6bf554b8052d643.

Change-Id: I5ce6ae9385697f420af60effe6deee4998e1095c

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,6 +11,7 @@ container:
 
 build_arm64_tc_task:
   name: "Build ARM64 Toolchain"
+  skip: "!changesInclude('build-datestamp')"
   timeout_in: 120m
   only_if: $CIRRUS_BRANCH == 'main'
   script:
@@ -52,6 +53,7 @@ build_arm64_tc_task:
 
 build_arm_tc_task:
   name: "Build ARM Toolchain"
+  skip: "!changesInclude('build-datestamp')"
   timeout_in: 120m
   only_if: $CIRRUS_BRANCH == 'main'
   script:
